# matsurihi.me-rs

./: .gitignore  Cargo.toml
src/: card.rs  idol.rs  lib.rs
src/model/: card.rs
tools/: go.mod  go.sum  idol_enum_generator.go
